--- a/lasso-bex6510-slides/library.bib
+++ b/lasso-bex6510-slides/library.bib
@@ -105,3 +105,35 @@
   year      =  1996,
   url       = "http://www.jstor.org/stable/2346178"
 }
+
+
+
+@ARTICLE{Tseng2001-lk,
+  title     = "Convergence of a Block Coordinate Descent Method for
+               Nondifferentiable Minimization",
+  author    = "Tseng, P",
+  abstract  = "We study the convergence properties of a (block) coordinate
+               descent method applied to minimize a nondifferentiable
+               (nonconvex) function f(x1, . . . , xN) with certain separability
+               and regularity properties. Assuming that f is continuous on a
+               compact level set, the subsequence convergence of the iterates
+               to a stationary point is shown when either f is pseudoconvex in
+               every pair of coordinate blocks from among N-1 coordinate blocks
+               or f has at most one minimum in each of N-2 coordinate blocks.
+               If f is quasiconvex and hemivariate in every coordinate block,
+               then the assumptions of continuity of f and compactness of the
+               level set may be relaxed further. These results are applied to
+               derive new (and old) convergence results for the proximal
+               minimization algorithm, an algorithm of Arimoto and Blahut, and
+               an algorithm of Han. They are applied also to a problem of blind
+               source separation.",
+  journal   = "Journal of optimization theory and applications",
+  publisher = "Kluwer Academic Publishers-Plenum Publishers",
+  volume    =  109,
+  number    =  3,
+  pages     = "475-494",
+  month     =  jun,
+  year      =  2001,
+  url       = "https://link.springer.com/article/10.1023/A:1017501703105",
+  language  = "en"
+}
