--- a/meetup-smart-buildings/library.bib
+++ b/meetup-smart-buildings/library.bib
@@ -5,3 +5,49 @@
   url          = "http://scikit-learn.org/stable/auto_examples/cluster/plot_cluster_comparison.html",
   note         = "Accessed: 2017-11-6"
 }
+
+
+
+
+@BOOK{Murphy2012-bc,
+  title     = "Machine Learning: A Probabilistic Perspective",
+  author    = "Murphy, Kevin P",
+  abstract  = "Today's Web-enabled deluge of electronic data calls for
+               automated methods of data analysis. Machine learning provides
+               these, developing methods that can automatically detect patterns
+               in data and then use the uncovered patterns to predict future
+               data. This textbook offers a comprehensive and self-contained
+               introduction to the field of machine learning, based on a
+               unified, probabilistic approach. The coverage combines breadth
+               and depth, offering necessary background material on such topics
+               as probability, optimization, and linear algebra as well as
+               discussion of recent developments in the field, including
+               conditional random fields, L1 regularization, and deep learning.
+               The book is written in an informal, accessible style, complete
+               with pseudo-code for the most important algorithms. All topics
+               are copiously illustrated with color images and worked examples
+               drawn from such application domains as biology, text processing,
+               computer vision, and robotics. Rather than providing a cookbook
+               of different heuristic methods, the book stresses a principled
+               model-based approach, often using the language of graphical
+               models to specify models in a concise and intuitive way. Almost
+               all the models described have been implemented in a MATLAB
+               software package -- PMTK (probabilistic modeling toolkit) --
+               that is freely available online. The book is suitable for
+               upper-level undergraduates with an introductory-level college
+               math background and beginning graduate students.",
+  publisher = "MIT Press",
+  month     =  aug,
+  year      =  2012,
+  language  = "en"
+}
+
+
+@BOOK{Friedman2001-vq,
+  title     = "The elements of statistical learning",
+  author    = "Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert",
+  publisher = "Springer series in statistics New York",
+  volume    =  1,
+  year      =  2001
+}
+
