--- a/meetup-smart-buildings/smart-buildings.Rmd
+++ b/meetup-smart-buildings/smart-buildings.Rmd
@@ -46,6 +46,12 @@ data <- read_csv("data/data.csv") %>%
 sensor_sample <- sample(unique(data$Sensor), 8)
 ```
 
+## TODO
+
+* Finish BMS section
+* Show a plot of spectral embedding. Also clustering maybe?
+* Add a reference to that spectral clustering paper.
+
 ## Overview
 
 * Smart buildings
@@ -54,15 +60,33 @@ sensor_sample <- sample(unique(data$Sensor), 8)
 
 # Smart buildings | Trying to be smart with commercial building data
 
-## How are buildings controlled
+## How do commercial buildings work?
 
-
+* Facility managers oversee the day to day operations of a commercial building.
+* Building operations are automated by Building Management Systems (BMSs).
 
 ## What is a BMS?
 
 * Commercial buildings contain Building Management Systems (BMSs).
 * Control heating, cooling, ventilation and lighting systems.
 * Typically contain a lot of sensors (>100,000).
+
+## How does this work in practice?
+
+Contractor comes in, sets up a BMS. The BMS will behave in a certain way based predefined rules.
+
+For instance - if high temperature readings are recorded in a room, more cooling will happen.
+
+BMS systems are costly to implement and to change. Can often require large amounts of code just to change a temperature set point.
+
+## So what can we do?
+
+* Help facility managers identify when a building is behaving erratically (automated fault detection).
+* Wealth of literature on fault detection
+    + Statistical methods
+    + Qualitative methods
+    + Quantitative
+* Buildings Alive's goal is to build an automated fault detection method to suit the data that we've collected and which can scale to multiple buildings.
 
 # Analysing the data | Feature extraction, dimensionality reduction, clustering
 
@@ -164,10 +188,16 @@ Find the $m$ eigenvectors $\mathbf{Z}_{n \times m}$ corresponding to the $m$ sma
 * Recently released by Plotly.
 * Easily build web applications for data analytics.
 * Open sourced under the MIT license.
+* Works nicely with the existing Plotly graphing libraries.
 * Python equivalent of `R`'s Shiny.
 
 ![](fig/dash-logo.svg)
 </div>
+
+----
+
+__TODO: Add screen shot of fancy Dash app.__
+
 
 ## Simple example {.smaller}
 
