--- a/meetup-smart-buildings/library.bib
+++ b/meetup-smart-buildings/library.bib
@@ -51,3 +51,11 @@
   year      =  2001
 }
 
+
+
+@ARTICLE{Von_Luxburg2007-dt,
+  title   = "A tutorial on spectral clustering",
+  author  = "Von Luxburg, Ulrike",
+  journal = "Statistics and computing",
+  year    =  2007
+}
